--- a/bundle.ejs
+++ b/bundle.ejs
@@ -1,43 +1,3 @@
-/**
- * 1.获取文件的内容
- * 2.获取依赖关系
- * ast -> 抽象语法树 -> 获取foo文件的节点
- */
-
-import fs from 'fs'
-import path from 'path'
-import esj from 'ejs'
-import parser from '@babel/parser'
-import traverse from '@babel/traverse'
-
-function createAsset(filePath) {
-    // 1.获取文件的内容
-    // ast -> 抽象语法树 -> 获取foo文件的节点
-
-    const source = fs.readFileSync(filePath,{
-        encoding: 'utf8'
-    })
-    // console.log(source)
-    // 2.获取依赖关系
-    const ast = parser.parse(source, {
-        sourceType: 'module',
-    })
-    // console.log(ast)
-    
-    const deps = []
-    traverse.default(ast, {
-        ImportDeclaration({ node }) {
-            deps.push(node.source.value)
-        }
-    })
-    return {
-        filePath,
-        source,
-        deps,
-    }
-}
-
-
 (function (modules) {
     
     function require(id) {
@@ -56,12 +16,15 @@ function createAsset(filePath) {
         return module.exports
     }
     
-    require(1)
+    require(0)
 })
 ({
     <% data.forEach(info => { %>
-        "<%- info["id"] %>": [function(require, module, exports) {
+        <%- info["id"] %>: 
+            [function(require, module, exports) {
             <%- info["code"] %>
-        },<%- JSON.stringify(info["mapping"])%>]
+        },
+        <%- JSON.stringify(info["mapping"])%>
+        ],
     <% }) %>
 })
